# minecraft_voxelizer

./: .gitignore  CMakeLists.txt  README.md  Todo.txt  app.rc  setup.sh
src/: main.cpp
src/core/: Mesh.cpp  Mesh.hpp  TextureAtlas.cpp  TextureAtlas.hpp  VoxelGrid.cpp  VoxelGrid.hpp
src/io/: GltfLoader.cpp  GltfLoader.hpp  MeshLoader.cpp  MeshLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
src/minecraft/: McConstants.hpp  McElement.hpp  McModel.cpp  McModel.hpp  McModel_atlas.cpp  McModel_element.cpp
src/pipeline/: GreedyMesher.cpp  GreedyMesher.hpp  Normalizer.cpp  Normalizer.hpp  Voxelizer.cpp  Voxelizer.hpp
src/pipeline/atlas/: GreedyMesher.cpp  GreedyMesher.hpp
src/pipeline/element/: GreedyMesher.cpp  GreedyMesher.hpp
